apps/uploads/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploads
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: uploads
  template:
    metadata:
      labels:
        app: uploads
    spec:
      imagePullSecrets:
        - name: pikol-pull-secret
      containers:
        - name: uploads
          image: ghcr.io/pikol-app/uploads:x.x.x
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 5
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads
