apps/uploads/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uploads
spec:
  selector:
    app: uploads
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
